--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -3,17 +3,17 @@ version: '3.8'
 services:
   #database section
 
-  #orderdb: sql server
-  orderdb:
-    container_name: orderdb
-    environment:
-      SA_PASSWORD: "Passw0rd!"
-      ACCEPT_EULA: "Y"
-    restart: always
-    volumes:
-      - sqlserver_data:/var/opt/mssql
-    ports:
-      - "1435:1433"
+  ##orderdb: sql server
+  #orderdb:
+  #  container_name: orderdb
+  #  environment:
+  #    SA_PASSWORD: "Passw0rd!"
+  #    ACCEPT_EULA: "Y"
+  #  restart: always
+  #  volumes:
+  #    - sqlserver_data:/var/opt/mssql
+  #  ports:
+  #    - "1435:1433"
 
   #productdb: msql
   productdb:
@@ -29,68 +29,68 @@ services:
     ports:
       - "3306:3306"
 
-  #customerdb: postgres
-  customerdb:
-    container_name: customerdb
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin1234
-      - POSTGRES_DB=CustomerDb
-    restart: always
-    ports:
-      - "5433:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+#  #customerdb: postgres
+#  customerdb:
+#    container_name: customerdb
+#    environment:
+#      - POSTGRES_USER=admin
+#      - POSTGRES_PASSWORD=admin1234
+#      - POSTGRES_DB=CustomerDb
+#    restart: always
+#    ports:
+#      - "5433:5432"
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data
 
-  #basketdb: redis
-  basketdb:
-    container_name: basketdb
-    restart: always
-    ports:
-      - "6379:6379"
+#  #basketdb: redis
+#  basketdb:
+#    container_name: basketdb
+#    restart: always
+#    ports:
+#      - "6379:6379"
   
-  #inventorydb: mongo
-  inventorydb:
-    container_name: inventorydb
-    restart: always
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
+#  #inventorydb: mongo
+#  inventorydb:
+#    container_name: inventorydb
+#    restart: always
+#    ports:
+#      - "27017:27017"
+#    volumes:
+#      - mongo_data:/data/db
 
-  #hangfiredb: mongo
-  hangfiredb:
-    container_name: hangfiredb
-    ports:
-      - "27018:27017"
-    volumes:
-      - hangfire_mongo_data:/data/db
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: 'admin'
-      MONGO_INITDB_ROOT_PASSWORD: 'admin'
+#  #hangfiredb: mongo
+#  hangfiredb:
+#    container_name: hangfiredb
+#    ports:
+#      - "27018:27017"
+#    volumes:
+#      - hangfire_mongo_data:/data/db
+#    restart: always
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: 'admin'
+#      MONGO_INITDB_ROOT_PASSWORD: 'admin'
 
-  #infrastructure section
-  rabbitmq:
-    container_name: rabbitmq
-    restart: always
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
-    hostname: rabbitmq
+#  #infrastructure section
+#  rabbitmq:
+#    container_name: rabbitmq
+#    restart: always
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#    volumes:
+#      - rabbitmq_data:/var/lib/rabbitmq
+#    hostname: rabbitmq
 
-  pgadmin:
-    container_name: pgadmin
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@tedu.com.vn
-      - PGADMIN_DEFAULT_PASSWORD=admin1234
-    restart: always
-    ports:
-      - "5050:80"
-    volumes:
-      - pgadmin_data:/root/.pgadmin
+#  pgadmin:
+#    container_name: pgadmin
+#    environment:
+#      - PGADMIN_DEFAULT_EMAIL=admin@tedu.com.vn
+#      - PGADMIN_DEFAULT_PASSWORD=admin1234
+#    restart: always
+#    ports:
+#      - "5050:80"
+#    volumes:
+#      - pgadmin_data:/root/.pgadmin
     
   portainer:
     container_name: portainer
@@ -102,33 +102,47 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
   
-  elasticsearch:
-    container_name: elasticsearch
-    environment:
-      - xpack.monitoring.enabled=true
-      - xpack.watcher.enabled=false
-      - xpack.security.enabled=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - discovery.type=single-node
-#      - ELASTIC_USERNAME=elastic #default username
-      - ELASTIC_PASSWORD=admin
-    ports:
-      - "9200:9200"
-    volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
+#  elasticsearch:
+#    container_name: elasticsearch
+#    environment:
+#      - xpack.monitoring.enabled=true
+#      - xpack.watcher.enabled=false
+#      - xpack.security.enabled=true
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#      - discovery.type=single-node
+##      - ELASTIC_USERNAME=elastic #default username
+#      - ELASTIC_PASSWORD=admin
+#    ports:
+#      - "9200:9200"
+#    volumes:
+#      - elasticsearch_data:/usr/share/elasticsearch/data
   
-  kibana:
-    container_name: kibana
+#  kibana:
+#    container_name: kibana
+#    environment:
+#      - ELASTICSEARCH_URL=http://elasticsearch:9200
+#      - ELASTICSEARCH_USERNAME=elastic
+#      - ELASTICSEARCH_PASSWORD=admin
+#    depends_on:
+#      - elasticsearch
+#    ports:
+#      - "5601:5601"
+#    healthcheck:
+#      test: curl -s http://localhost:9200 >/dev/null; if [[ $$? == 52 ]]; then echo 0; else echo 1; fi
+#      interval: 30s
+#      timeout: 10s
+#      retries: 5
+
+  #microservices api section
+  product.api:
+    container_name: product.api
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-      - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=admin
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - "ConnectionStrings:DefaultConnectionString=Server=productdb;Port=3306;Database=ProductDB;Uid=root;Pwd=Passw0rd!;"
     depends_on:
-      - elasticsearch
+      - productdb
     ports:
-      - "5601:5601"
-    healthcheck:
-      test: curl -s http://localhost:9200 >/dev/null; if [[ $$? == 52 ]]; then echo 0; else echo 1; fi
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      - "6002:80"
+    restart: always
+    
