--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,39 +2,46 @@ version: '3.8'
 
 services:
   #database section
-  orderdb:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+  #orderdb:
+  #  image: mcr.microsoft.com/mssql/server:2019-latest
 
   productdb:
     image: mysql:8.0.29
   
-  customerdb:
-    image: postgres:alpine3.16
+  #customerdb:
+  #  image: postgres:alpine3.16
 
-  basketdb:
-    image: redis:alpine
+  #basketdb:
+  #  image: redis:alpine
 
-  inventorydb:
-    image: mongo
+  #inventorydb:
+  #  image: mongo
   
-  hangfiredb:
-    image: mongo
+  #hangfiredb:
+  #  image: mongo
 
-  #infrastructure section
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
+  ##infrastructure section
+  #rabbitmq:
+  #  image: rabbitmq:3-management-alpine
 
-  pgadmin:
-    image: dpage/pgadmin4
+  #pgadmin:
+  #  image: dpage/pgadmin4
 
   portainer:
     image: portainer/portainer-ce
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.7
+  #elasticsearch:
+  #  image: docker.elastic.co/elasticsearch/elasticsearch:7.17.7
   
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.17.7
+  #kibana:
+  #  image: docker.elastic.co/kibana/kibana:7.17.7
+
+  #microservices api section
+  product.api:
+    image: ${DOCKER_REGISTRY-}product-api:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+      context: .
+      dockerfile: Services/Product.API/Dockerfile
 
 #network section
 networks:
@@ -44,23 +51,23 @@ networks:
 
 #volumes section
 volumes:
-  sqlserver_data:
-    name: sqlserver_data
+  #sqlserver_data:
+  #  name: sqlserver_data
   mysql_data:
     name: mysql_data
-  postgres_data:
-    name: postgres_data
+  #postgres_data:
+  #  name: postgres_data
   portainer_data:
     name: portainer_data
-  elasticsearch_data:
-    name: elasticsearch_data
-  jaeger_data:
-    name: jaeger_data
-  mongo_data:
-    name: mongo_data
-  hangfire_mongo_data:
-    name: hangfire_mongo_data
-  pgadmin_data:
-    name: pgadmin_data
-  rabbitmq_data:
-    name: rabbitmq_data
+  #elasticsearch_data:
+  #  name: elasticsearch_data
+  #jaeger_data:
+  #  name: jaeger_data
+  #mongo_data:
+  #  name: mongo_data
+  #hangfire_mongo_data:
+  #  name: hangfire_mongo_data
+  #pgadmin_data:
+  #  name: pgadmin_data
+  #rabbitmq_data:
+  #  name: rabbitmq_data
