--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -29,18 +29,18 @@ services:
     ports:
       - "3306:3306"
 
-#  #customerdb: postgres
-#  customerdb:
-#    container_name: customerdb
-#    environment:
-#      - POSTGRES_USER=admin
-#      - POSTGRES_PASSWORD=admin1234
-#      - POSTGRES_DB=CustomerDb
-#    restart: always
-#    ports:
-#      - "5433:5432"
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
+  #customerdb: postgres
+  customerdb:
+    container_name: customerdb
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRES_DB=CustomerDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 #  #basketdb: redis
 #  basketdb:
@@ -81,16 +81,16 @@ services:
 #      - rabbitmq_data:/var/lib/rabbitmq
 #    hostname: rabbitmq
 
-#  pgadmin:
-#    container_name: pgadmin
-#    environment:
-#      - PGADMIN_DEFAULT_EMAIL=admin@tedu.com.vn
-#      - PGADMIN_DEFAULT_PASSWORD=admin1234
-#    restart: always
-#    ports:
-#      - "5050:80"
-#    volumes:
-#      - pgadmin_data:/root/.pgadmin
+  pgadmin:
+    container_name: pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@tedu.com.vn
+      - PGADMIN_DEFAULT_PASSWORD=admin1234
+    restart: always
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/root/.pgadmin
     
   portainer:
     container_name: portainer
