--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CacheSetttings": {
+    "ConnectionString": "locahost:6379"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
