--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,8 +11,8 @@ services:
   customerdb:
     image: postgres:alpine3.16
 
-  #basketdb:
-  #  image: redis:alpine
+  basketdb:
+    image: redis:alpine
 
   #inventorydb:
   #  image: mongo
