--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "CacheSetttings": {
-    "ConnectionString": "locahost:6379"
+    "ConnectionString": "localhost:6379"
   },
   "Serilog": {
     "MinimumLevel": {
