--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -3,17 +3,17 @@ version: '3.8'
 services:
   #database section
 
-  ##orderdb: sql server
-  #orderdb:
-  #  container_name: orderdb
-  #  environment:
-  #    SA_PASSWORD: "Passw0rd!"
-  #    ACCEPT_EULA: "Y"
-  #  restart: always
-  #  volumes:
-  #    - sqlserver_data:/var/opt/mssql
-  #  ports:
-  #    - "1435:1433"
+  #orderdb: sql server
+  orderdb:
+   container_name: orderdb
+   environment:
+     SA_PASSWORD: "Passw0rd!"
+     ACCEPT_EULA: "Y"
+   restart: always
+   volumes:
+     - sqlserver_data:/var/opt/mssql
+   ports:
+     - "1435:1433"
 
   #productdb: msql
   productdb:
