--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   #database section
-  #orderdb:
-  #  image: mcr.microsoft.com/mssql/server:2019-latest
+  orderdb:
+   image: mcr.microsoft.com/mssql/server:2019-latest
 
   productdb:
     image: mysql:8.0.29
@@ -63,8 +63,8 @@ networks:
 
 #volumes section
 volumes:
-  #sqlserver_data:
-  #  name: sqlserver_data
+  sqlserver_data:
+   name: sqlserver_data
   mysql_data:
     name: mysql_data
   postgres_data:
