--- a/src/BuildingBlocks/EventBus/EventBus.MessageComponents/EventBus.MessageComponents.csproj
+++ b/src/BuildingBlocks/EventBus/EventBus.MessageComponents/EventBus.MessageComponents.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EventBus.Messages\EventBus.Messages.csproj" />
   </ItemGroup>
 
