--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=localhost,1435;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
   },
