--- a/src/Services/Inventory.Product.API/appsettings.json
+++ b/src/Services/Inventory.Product.API/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft.AspNetCore.Authentication": "Debug",
-        "System": "Warning"
-      }
+  "MongoDbSettings": {
+    "DBProvider": "mongodb",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "InventoryDb"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
