--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -48,15 +48,15 @@ services:
     restart: always
     ports:
       - "6379:6379"
-  
-#  #inventorydb: mongo
-#  inventorydb:
-#    container_name: inventorydb
-#    restart: always
-#    ports:
-#      - "27017:27017"
-#    volumes:
-#      - mongo_data:/data/db
+
+ #inventorydb: mongo
+  inventorydb:
+   container_name: inventorydb
+   restart: always
+   ports:
+     - "27017:27017"
+   volumes:
+     - mongo_data:/data/db
 
 #  #hangfiredb: mongo
 #  hangfiredb:
