--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   basketdb:
     image: redis:alpine
 
-  #inventorydb:
-  #  image: mongo
+  inventorydb:
+   image: mongo
   
   #hangfiredb:
   #  image: mongo
@@ -81,8 +81,8 @@ volumes:
   #  name: elasticsearch_data
   #jaeger_data:
   #  name: jaeger_data
-  #mongo_data:
-  #  name: mongo_data
+  mongo_data:
+   name: mongo_data
   #hangfire_mongo_data:
   #  name: hangfire_mongo_data
   pgadmin_data:
