--- a/src/Services/Inventory/Inventory.Grpc/Properties/launchSettings.json
+++ b/src/Services/Inventory/Inventory.Grpc/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5107;https://localhost:7104",
+      "applicationUrl": "http://localhost:5007",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
