--- a/src/Services/Basket.API/Properties/launchSettings.json
+++ b/src/Services/Basket.API/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "Basket.API": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
