Get Token in OcelotApiGw and Authorize in Product.API

--- a/src/ApiGateways/OcelotApiGw/appsettings.json
+++ b/src/ApiGateways/OcelotApiGw/appsettings.json
@@ -10,6 +10,9 @@
       }
     }
   },
+  "JwtSettings": {
+    "Key": "AVERYVERYVERYVERYVERYTOPSECRET123456789^%$"
+  },
   "AllowOrigins": "*",
   "AllowedHosts": "*"
 }
