--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -212,4 +212,20 @@ services:
     ports:
       - "6007:80"
     restart: always
+
+  apigw.ocelot:
+    container_name: apigw.ocelot
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Local
+      - ASPNETCORE_URLS=http://+:80
+      - "GlobalConfiguration:BaseUrl=http://apigw.ocelot"
+    depends_on:
+      - product.api
+      - customer.api
+      - basket.api
+      - order.api
+      - inventory.product.api
+    ports:
+      - "6001:80"
+    restart: always
     
