--- a/src/Services/Hangfire.API/appsettings.Development.json
+++ b/src/Services/Hangfire.API/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "HangFireSettings": {
+    "Route": "/jobs",
+    "ServerName": "Hangfire API",
+    "Dashboard": {
+      "AppPath": "/",
+      "StatsPollingInterval": 2000,
+      "DashboardTitle": "Jobs"
+    },
+    "Storage": {
+      "DBProvider": "mongodb",
+      "ConnectionString": "mongodb://admin:admin@localhost:27018/hangfire-webapi?authSource=admin"
     }
   }
 }
