--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -59,16 +59,16 @@ services:
      - mongo_data:/data/db
 
 #  #hangfiredb: mongo
-#  hangfiredb:
-#    container_name: hangfiredb
-#    ports:
-#      - "27018:27017"
-#    volumes:
-#      - hangfire_mongo_data:/data/db
-#    restart: always
-#    environment:
-#      MONGO_INITDB_ROOT_USERNAME: 'admin'
-#      MONGO_INITDB_ROOT_PASSWORD: 'admin'
+  hangfiredb:
+    container_name: hangfiredb
+    ports:
+      - "27018:27017"
+    volumes:
+      - hangfire_mongo_data:/data/db
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: 'admin'
+      MONGO_INITDB_ROOT_PASSWORD: 'admin'
 
  #infrastructure section
   rabbitmq:
@@ -134,98 +134,98 @@ services:
 #      retries: 5
 
   #microservices api section
-  product.api:
-    container_name: product.api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - "ConnectionStrings:DefaultConnectionString=Server=productdb;Port=3306;Database=ProductDB;Uid=root;Pwd=Passw0rd!"
-    depends_on:
-      - productdb
-    ports:
-      - "6002:80"
-    restart: always
+  #product.api:
+  #  container_name: product.api
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "ConnectionStrings:DefaultConnectionString=Server=productdb;Port=3306;Database=ProductDB;Uid=root;Pwd=Passw0rd!"
+  #  depends_on:
+  #    - productdb
+  #  ports:
+  #    - "6002:80"
+  #  restart: always
    
-  customer.api:
-    container_name: customer.api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - "ConnectionStrings:DefaultConnectionString=Server=customerdb;Port=5432;Database=CustomerDb;User Id=admin;Password=admin1234"
-    depends_on:
-      - customerdb
-    ports:
-      - "6003:80"
-    restart: always
+  #customer.api:
+  #  container_name: customer.api
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "ConnectionStrings:DefaultConnectionString=Server=customerdb;Port=5432;Database=CustomerDb;User Id=admin;Password=admin1234"
+  #  depends_on:
+  #    - customerdb
+  #  ports:
+  #    - "6003:80"
+  #  restart: always
 
-  basket.api:
-    container_name: basket.api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - "CacheSettings:ConnectionString=basketdb:6379"
-      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
-      - "GrpcSettings:StockUrl=http://inventory.grpc"
-    depends_on:
-      - basketdb
-      - rabbitmq
-    ports:
-      - "6004:80"
-    restart: always
+  #basket.api:
+  #  container_name: basket.api
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "CacheSettings:ConnectionString=basketdb:6379"
+  #    - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+  #    - "GrpcSettings:StockUrl=http://inventory.grpc"
+  #  depends_on:
+  #    - basketdb
+  #    - rabbitmq
+  #  ports:
+  #    - "6004:80"
+  #  restart: always
 
-  order.api:
-    container_name: order.api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - "ConnectionStrings:DefaultConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
-      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
-    depends_on:
-      - orderdb
-      - rabbitmq
-    ports:
-      - "6005:80"
-    restart: always
+  #order.api:
+  #  container_name: order.api
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "ConnectionStrings:DefaultConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
+  #    - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+  #  depends_on:
+  #    - orderdb
+  #    - rabbitmq
+  #  ports:
+  #    - "6005:80"
+  #  restart: always
     
-  inventory.product.api:
-    container_name: inventory.product.api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - "MongoDbSettings:ConnectionString=mongodb://inventorydb:27017"
-      - "MongoDbSettings:DatabaseName=InventoryDb"
-    depends_on:
-      - inventorydb
-    ports:
-      - "6006:80"
-    restart: always
+  #inventory.product.api:
+  #  container_name: inventory.product.api
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "MongoDbSettings:ConnectionString=mongodb://inventorydb:27017"
+  #    - "MongoDbSettings:DatabaseName=InventoryDb"
+  #  depends_on:
+  #    - inventorydb
+  #  ports:
+  #    - "6006:80"
+  #  restart: always
 
-  inventory.grpc:
-    container_name: inventory.grpc
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - "MongoDbSettings:ConnectionString=mongodb://inventorydb:27017"
-      - "MongoDbSettings:DatabaseName=InventoryDb"
-    depends_on:
-      - inventorydb
-    ports:
-      - "6007:80"
-    restart: always
+  #inventory.grpc:
+  #  container_name: inventory.grpc
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "MongoDbSettings:ConnectionString=mongodb://inventorydb:27017"
+  #    - "MongoDbSettings:DatabaseName=InventoryDb"
+  #  depends_on:
+  #    - inventorydb
+  #  ports:
+  #    - "6007:80"
+  #  restart: always
 
-  apigw.ocelot:
-    container_name: apigw.ocelot
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Local
-      - ASPNETCORE_URLS=http://+:80
-      - "GlobalConfiguration:BaseUrl=http://apigw.ocelot"
-    depends_on:
-      - product.api
-      - customer.api
-      - basket.api
-      - order.api
-      - inventory.product.api
-    ports:
-      - "6001:80"
-    restart: always
+  #apigw.ocelot:
+  #  container_name: apigw.ocelot
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Local
+  #    - ASPNETCORE_URLS=http://+:80
+  #    - "GlobalConfiguration:BaseUrl=http://apigw.ocelot"
+  #  depends_on:
+  #    - product.api
+  #    - customer.api
+  #    - basket.api
+  #    - order.api
+  #    - inventory.product.api
+  #  ports:
+  #    - "6001:80"
+  #  restart: always
     
