When Update Basket, Trigger send email reminder - Get email template

--- a/src/Services/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket.API/Basket.API.csproj
@@ -30,4 +30,10 @@
     </Protobuf>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="EmailTemplates\reminder-checkout-order.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
