--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -6,7 +6,11 @@
     "ConnectionString": "localhost:6379"
   },
   "GrpcSettings": {
-    "StockUrl":  "http://localhost:5007"
+    "StockUrl": "http://localhost:5007"
+  },
+  "UrlSettings": {
+    "ApiGwUrl": "http://localhost:5001",
+    "HangfireUrl": "http://localhost:5008"
   },
   "Serilog": {
     "MinimumLevel": {
