Containerize Hangfire API

--- a/src/Services/Customer.API/appsettings.json
+++ b/src/Services/Customer.API/appsettings.json
@@ -13,5 +13,18 @@
       }
     }
   },
+  "HangFireSettings": {
+    "Route": "/jobs",
+    "ServerName": "Customer API",
+    "Dashboard": {
+      "AppPath": "/",
+      "StatsPollingInterval": 2000,
+      "DashboardTitle": "Jobs"
+    },
+    "Storage": {
+      "DBProvider": "postgresql",
+      "ConnectionString": "yourConnectionString"
+    }
+  },
   "AllowedHosts": "*"
 }
