--- a/src/Services/Hangfire.API/appsettings.json
+++ b/src/Services/Hangfire.API/appsettings.json
@@ -10,6 +10,19 @@
       }
     }
   },
+  "HangFireSettings": {
+    "Route": "/jobs",
+    "ServerName": "Hangfire API",
+    "Dashboard": {
+      "AppPath": "/",
+      "StatsPollingInterval": 2000,
+      "DashboardTitle": "Jobs"
+    },
+    "Storage": {
+      "DBProvider": "mongodb",
+      "ConnectionString": "yourConnectionString"
+    }
+  },
   "EmailSMTPSetting": {
     "DisplayName": "Tedu Microservice",
     "EnableVerification": false,
