--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -37,47 +37,53 @@ services:
   #  image: docker.elastic.co/kibana/kibana:7.17.7
 
   #microservices api section
-  #product.api:
+  # product.api:
   #  image: ${DOCKER_REGISTRY-}product-api:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: Services/Product.API/Dockerfile
 
-  #customer.api:
+  # customer.api:
   #  image: ${DOCKER_REGISTRY-}customer-api:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: Services/Customer.API/Dockerfile
 
-  #basket.api:
+  # basket.api:
   #  image: ${DOCKER_REGISTRY-}basket-api:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: Services/Basket.API/Dockerfile
 
-  #order.api:
+  # order.api:
   #  image: ${DOCKER_REGISTRY-}order-api:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: Services/Ordering/Ordering.API/Dockerfile
 
-  #inventory.product.api:
+  # inventory.product.api:
   #  image: ${DOCKER_REGISTRY-}inventory-product-api:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: Services/Inventory/Inventory.Product.API/Dockerfile
 
-  #inventory.grpc:
+  # inventory.grpc:
   #  image: ${DOCKER_REGISTRY-}inventory-grpc:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: Services/Inventory/Inventory.Grpc/Dockerfile
 
-  #apigw.ocelot:
+  # apigw.ocelot:
   #  image: ${DOCKER_REGISTRY-}apigw-ocelot:${PLATFORM:-linux}-${TAG:-latest}
   #  build:
   #    context: .
   #    dockerfile: ApiGateways/OcelotApiGw/Dockerfile
+
+  # hangfire.api:
+  #  image: ${DOCKER_REGISTRY-}hangfire-api:${PLATFORM:-linux}-${TAG:-latest}
+  #  build:
+  #    context: .
+  #    dockerfile: Services/Hangfire.API/Dockerfile
 
 #network section
 networks:
