--- a/src/Saga.Orchestrator/Saga.Orchestrator/Saga.Orchestrator.csproj
+++ b/src/Saga.Orchestrator/Saga.Orchestrator/Saga.Orchestrator.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Stateless" Version="5.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
