--- a/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
+++ b/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -15,7 +15,7 @@
     <PackageReference Include="Hangfire.Mongo" Version="1.10.3" />
     <PackageReference Include="Hangfire.PostgreSql" Version="1.20.6" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.11" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
