--- a/src/Saga.Orchestrator/Saga.Orchestrator/appsettings.json
+++ b/src/Saga.Orchestrator/Saga.Orchestrator/appsettings.json
@@ -1,9 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
+      }
     }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200",
+    "UserName": "elastic",
+    "Password": "admin"
   },
   "AllowedHosts": "*"
 }
