--- a/src/Services/Customer.API/appsettings.Development.json
+++ b/src/Services/Customer.API/appsettings.Development.json
@@ -11,5 +11,10 @@
       "DBProvider": "postgresql",
       "ConnectionString": "Server=localhost;Port=5433;Database=CustomerDb;User Id=admin;Password=admin1234"
     }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200",
+    "UserName": "elastic",
+    "Password": "admin"
   }
 }
