--- a/src/Services/Product.API/appsettings.Development.json
+++ b/src/Services/Product.API/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200",
+    "UserName": "elastic",
+    "Password": "admin"
   }
 }
