--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -102,36 +102,36 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
   
-#  elasticsearch:
-#    container_name: elasticsearch
-#    environment:
-#      - xpack.monitoring.enabled=true
-#      - xpack.watcher.enabled=false
-#      - xpack.security.enabled=true
-#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-#      - discovery.type=single-node
-##      - ELASTIC_USERNAME=elastic #default username
-#      - ELASTIC_PASSWORD=admin
-#    ports:
-#      - "9200:9200"
-#    volumes:
-#      - elasticsearch_data:/usr/share/elasticsearch/data
+  elasticsearch:
+    container_name: elasticsearch
+    environment:
+      - xpack.monitoring.enabled=true
+      - xpack.watcher.enabled=false
+      - xpack.security.enabled=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+#      - ELASTIC_USERNAME=elastic #default username
+      - ELASTIC_PASSWORD=admin
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
   
-#  kibana:
-#    container_name: kibana
-#    environment:
-#      - ELASTICSEARCH_URL=http://elasticsearch:9200
-#      - ELASTICSEARCH_USERNAME=elastic
-#      - ELASTICSEARCH_PASSWORD=admin
-#    depends_on:
-#      - elasticsearch
-#    ports:
-#      - "5601:5601"
-#    healthcheck:
-#      test: curl -s http://localhost:9200 >/dev/null; if [[ $$? == 52 ]]; then echo 0; else echo 1; fi
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
+  kibana:
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=admin
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
+    healthcheck:
+      test: curl -s http://localhost:9200 >/dev/null; if [[ $$? == 52 ]]; then echo 0; else echo 1; fi
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   #microservices api section
   # product.api:
