Healthcheck: Configuration for Services

--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -3,6 +3,7 @@
     "HostAddress": "amqp://guest:guest@localhost:5672"
   },
   "CacheSettings": {
+    "DBProvider": "redis",
     "ConnectionString": "localhost:6379"
   },
   "GrpcSettings": {
