--- a/src/Services/Customer.API/Customer.API.csproj
+++ b/src/Services/Customer.API/Customer.API.csproj
@@ -10,15 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="6.0.2" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.6" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
+	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.26" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.28" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.28">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
-	  <PackageReference Include="Npgsql" Version="6.0.4" />
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
+	  <PackageReference Include="Npgsql" Version="6.0.10" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
   </ItemGroup>
 
   <ItemGroup>
