--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -2,8 +2,9 @@
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
   },
-  "ConnectionStrings": {
-    "DefaultConnectionString": "Server=localhost,1435;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
+  "DatabaseSettings": {
+    "DBProvider": "mssql",
+    "ConnectionString": "Server=localhost,1435;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
   },
   "SMTPEmailSetting": {
     "DisplayName": "Tedu Microservice",
