Authentication & Athorization for Product Service based on Identity Permissions

--- a/src/Services/Product.API/appsettings.json
+++ b/src/Services/Product.API/appsettings.json
@@ -17,5 +17,14 @@
   "JwtSettings": {
     "Key": "AVERYVERYVERYVERYVERYTOPSECRET123456789^%$"
   },
+  "ApiConfiguration": {
+    "ApiTitle": "Product API",
+    "ApiName": "tedu_microservices_api",
+    "ApiVersion": "v1",
+    "IdentityServerBaseUrl": "http://localhost:5001",
+    "IssuerUri": "http://localhost:5001",
+    "ApiBaseUrl": "http://localhost:5002",
+    "ClientId": "tedu_microservices_swagger"
+  },
   "AllowedHosts": "*"
 }
