--- a/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
+++ b/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Hangfire.Mongo" Version="1.10.3" />
     <PackageReference Include="Hangfire.PostgreSql" Version="1.20.6" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.11" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.3" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
